--- a/auros.html
+++ b/auros.html
@@ -53,11 +53,18 @@
 
           <div class="cart1">
             <i class="i1 fa-solid fa-magnifying-glass"></i>
-            <p class="zin"><i class=" i1 fa-regular fa-user"></i></p>
+            <i onclick="iconList()" class= " i1 fa-regular fa-user" ></i>
             <i class="i1 fa-solid fa-cart-shopping"></i>
+
+            <div class="nxtPag">
+              <a href="./Pages/sign up.html">Sign up</a>
+              <a href="./Pages/login.html">Loign</a>
+            </div>
           </div>
 
-          <div class="loginPage">
+          
+
+          <!-- <div class="loginPage">
             <div class="sign">
               <h4>Sign in</h4>
               <a class="acc" href="">Create an Account </a>
@@ -76,7 +83,7 @@
               <button class="btnLOG">LOGIN</button>
               <p class="acc">Lost your password?</p>
             </div>
-          </div>
+          </div> -->
         </div>
         
       </div>
@@ -370,6 +377,6 @@
         </div>
       </div>
     </div>
-    <script src="./app.js"></script>
+    <script src="./js/home.js"></script>
   </body>
 </html>
